# blue_light

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  USAGE.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  reload_server.sh  setup_env.sh
backend/: .flake8  Dockerfile  pyproject.toml
backend/api/api/: urls.py
backend/api/api/settings/: default.py
backend/api/common/: code_generation.py  date_validator.py  datetime.py  delete_migrations.py  dicts.py  encryption.py  methods.py  model_versioning.py  password_validation.py  phone_numbers.py  query_params.py  response_templates.py  types_casting.py  video.py
backend/api/common/audit/: admin.py  models.py  serializer.py  variables.py
backend/api/common/model_fields/: added_validators.py  base_file.py  currency.py  decimal.py  document.py  generators.py  image.py  name.py  png.py  svg.py  validators.py
backend/api/common/rest_framework/: api_versioning.py  drf_spectacular.py  exception_handler.py  exceptions.py  filters.py  headers.py  middlewares.py  (+6 more)
backend/api/courses/: admin.py  filters.py  models.py  serializers.py  translation.py  urls.py  utils.py  views.py
backend/api/enums/: admin.py  enums.py  urls.py  views.py
backend/api/home/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/myauth/: authenticator.py  serializers.py  urls.py  views.py
backend/api/notifications/: admin.py  models.py  serializers.py  views.py
backend/api/orders/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/api/rates/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/uploader/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/users/: admin.py  models.py  serializers.py  urls.py  views.py
(+43 files in other folders)
